--- a/add.html
+++ b/add.html
@@ -15,9 +15,15 @@
 
 <script>
 
+const electron = require('electron');
+const { ipcRenderer } = electron;
+
   document.querySelector('form').addEventListener('submit', (event) => {
      event.preventDefault();
 
-     debugger;
+     //debugger;
+
+     const { value } = document.querySelector('input');
+     ipcRenderer.send('todo:add', value);
   });
 </script>
